Cleaned up design by removing shadows. Monospace addresses. Added clippy.swf for clipboard copying, but haven't implemented yet. Changed about page layout to split. Fixed modal closing bug.

--- a/css/site.css
+++ b/css/site.css
@@ -6,6 +6,10 @@
     padding: 16px;
 }
 
+.doge-address {
+    font-family: monospace;
+}
+
 .inner-shadow {
     box-shadow: inset 0 0 10px #000;
 }
@@ -15,57 +19,29 @@
 }
 
 .modal-of-donate {
-    /*position: absolute;
-    margin: 0 auto;
-    width: 60%;*/
-    margin-top: -10px;
+    margin-top: 16px;
     box-shadow: 0 0 10px #FFF;
     background-color: #FFF;
     border: 1px solid gray;
     padding: 10px;
-
 
     display: none;
 }
 
 .modal-exit-bar {
     width: 100%;
+    height: 30px;
     background-color: #EEE;
 }
 
 .modal-get-out-now-pls {
     float: right;
+    cursor: pointer;
     padding: 5px;
 }
 
 .captcha {
     padding: 10px;
-}
-
-.left-side, .right-side {
-    margin: 10px;
-    padding: 10px;
-    background: #F2F0EA;
-}
-
-.left-side {
-    box-shadow: 10px 0px 4px -6px rgba(0,0,0,0.75);
-}
-
-.right-side {
-    box-shadow: -10px 0px 4px -6px rgba(0,0,0,0.75);
-}
-
-.right-side p, .right-side h1, .right-side h2 {
-    text-align: right;
-}
-
-.left-side p, .left-side h1, .left-side h2 {
-    text-align: left;
-}
-
-.color-doge {
-    background: #F2E9C6;
 }
 
 .padded-description {
@@ -74,18 +50,7 @@
 
 .center {
     display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-.countdown-clock-container {
-    padding-top: 91px;
-}
-
-.countdown-clock {
-    padding: 10px;
-    background-color: rgba(255,255,255,0.5);;
-    border-radius: 30px;
+    margin: 0 auto;
 }
 
 .scene-container {
@@ -162,14 +127,11 @@
 .funding-goal-box {
     position: relative;
     margin: 0 auto;
-    width: 33%;
-    height: 80px;
-    margin-bottom: -80px;
     text-align: center;
     vertical-align: middle;
-    /*border: 1px solid black;*/
-    border-top: none;
-    background-color: #FFF;
+    background-color: lightgray;
+    width: 100%;
+    height: 80px;
     z-index: 610;
 }
 
@@ -192,32 +154,32 @@
 }
 
 .charity-vertical-divider {
+    display: none;
     margin: 0 auto;
     width: 0;
     height: 300px;
-    border: 1px dashed gray;
+    border: 1px dashed lightgray;
 }
 
 .charity-description-heading {
-    width: 75%;
+    width: 100%;
 }
 
 .charity-description-heading-right {
-    margin-left: 15%;
+    margin-left: 0%;
     float: right;
 }
 
 .charity-description-text {
     position: relative;
-    width: 75%;
-    margin-right: 15%;
+    width: 100%;
+    margin-right: 0;
     backface-visibility: hidden;
 }
 
 .charity-description-text-right {
     float: right;
-    margin-left: 15%;
-    margin-right: 0;
+    width: 100%;
 }
 
 .specialfix {
@@ -265,49 +227,6 @@
     width: 0;
 }
 
-@media (max-width: 992px) {
-    .form-control {
-        width: 128px !important;
-    }
-
-    .funding-goal-box {
-        width: 100%;
-        height: 80px;
-        margin-bottom: 0;
-        /*border-bottom: none;*/
-    }
-
-    .charity-description {
-        border: none;
-    }
-
-    .charity-description-right {
-        border: none;
-    }
-
-    .charity-description-heading {
-        width: 100%;
-    }
-
-    .charity-description-heading-right {
-        margin-left: 0%;
-        float: right;
-    }
-
-    .charity-description-text {
-        width: 100%;
-    }
-
-    .charity-description-text-right {
-        float: right;
-        width: 100%;
-    }
-
-    .charity-vertical-divider {
-        display: none;
-    }
-}
-
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
@@ -341,6 +260,10 @@
         height: 16px;
         top: 128px;
     }
+
+    .form-control {
+        width: 128px !important;
+    }
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -350,6 +273,28 @@
         width: 256px;
         margin-left: -124px;
         margin-right: 124px;
+    }
+
+    .charity-description-heading {
+        width: 75%;
+    }
+
+    .charity-description-heading-right {
+        margin-left: 25%;
+    }
+
+    .charity-description-text {
+        width: 75%;
+        margin-right: 25%;
+    }
+
+    .charity-description-text-right {
+        margin-left: 25%;
+        margin-right: 0;
+    }
+
+    .charity-vertical-divider {
+        display: block;
     }
 
     .moon-scene {
@@ -383,6 +328,10 @@
         height: 46px;
         display: block;
     }
+
+    .form-control {
+        width: auto !important;
+    }
 }
 
 /* Large devices (large desktops, 1200px and up) */
@@ -392,6 +341,12 @@
         width: 380px;
         margin-left: -180px;
         margin-right: 180px;
+    }
+
+    .funding-goal-box {
+        width: 33%;
+        height: 80px;
+        margin-bottom: -80px;
     }
 
     .moon-scene {
